# trigger_maestro_data_update

./: .gitignore  JOB: TRIGGER_DATA_UPDATE  README.md  config.json  main.py  mermaid.md  oauth.py  pyproject.toml  request.py  run_trigger_data_update.sh  trigger_data_update.py
tests/: test_trigger_data_update.py
