[project]
name = "trigger-maestro-data-update"
version = "0.1.0"
description = ""
authors = [
    {name = "Mauricio",email = "mauricio_alves@msn.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "oauthlib (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
